// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilePreviewGrid/> custom column headers 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            First Column
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            Second Column
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            Third Column
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            abc
          </td>
          <td
            style="text-align: left;"
          >
            123
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-01
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            style="text-align: left;"
          >
            def
          </td>
          <td
            style="text-align: left;"
          >
            456
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-02
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            ghi
          </td>
          <td
            style="text-align: left;"
          >
            789
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> custom header and info message 1`] = `
<div>
  <strong>
    Custom Header
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
    Custom info message.
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            col1
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            col2
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            col3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            abc
          </td>
          <td
            style="text-align: left;"
          >
            123
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-01
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            style="text-align: left;"
          >
            def
          </td>
          <td
            style="text-align: left;"
          >
            456
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-02
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            ghi
          </td>
          <td
            style="text-align: left;"
          >
            789
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> error message 1`] = `
<div>
  <div
    class="alert alert-warning"
    role="alert"
  >
    Testing error message
  </div>
</div>
`;

exports[`<FilePreviewGrid/> error message with custom style 1`] = `
<div>
  <div
    class="alert alert-danger"
    role="alert"
  >
    Testing error message
  </div>
</div>
`;

exports[`<FilePreviewGrid/> no data 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 0 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="table table-striped table-bordered"
    >
      <thead>
        <tr />
      </thead>
      <tbody>
        <tr
          class="grid-empty"
        >
          <td
            colspan="0"
          >
            No data available.
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> one row of data 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      one row 
       of your data file
       
      is
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="test"
          >
            test
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            123
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> three rows of data 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            col1
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            col2
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            col3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            abc
          </td>
          <td
            style="text-align: left;"
          >
            123
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-01
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            style="text-align: left;"
          >
            def
          </td>
          <td
            style="text-align: left;"
          >
            456
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-02
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            ghi
          </td>
          <td
            style="text-align: left;"
          >
            789
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<FilePreviewGrid/> warning message 1`] = `
<div>
  <strong>
    File preview:
  </strong>
  <div
    class="margin-top alert alert-warning"
    role="alert"
  >
    Testing warning message
  </div>
  <p
    class="margin-top"
  >
    <span>
      The 
      first 3 rows 
       of your data file
       
      are
       shown below.
    </span>
     
  </p>
  <div
    class="table-responsive"
  >
    <div
      class="grid-messages"
    />
    <table
      class="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col1"
          >
            col1
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col2"
          >
            col2
          </th>
          <th
            class="grid-header-cell"
            draggable="false"
            id="col3"
          >
            col3
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            abc
          </td>
          <td
            style="text-align: left;"
          >
            123
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-01
          </td>
        </tr>
        <tr
          class="grid-row"
        >
          <td
            style="text-align: left;"
          >
            def
          </td>
          <td
            style="text-align: left;"
          >
            456
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-02
          </td>
        </tr>
        <tr
          class="grid-row-alternate"
        >
          <td
            style="text-align: left;"
          >
            ghi
          </td>
          <td
            style="text-align: left;"
          >
            789
          </td>
          <td
            style="text-align: left;"
          >
            2019-01-03
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
